<resources>
    <string name="app_name">Bagan Kori</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bagan Kori</string>
    <string name="nav_header_subtitle">support@bagankori.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_shop">Product</string>
    <string name="menu_slideshow">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_offers">Offers</string>


    <string name="menu_redeem">Redeem</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>