<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_timeline"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_shop2"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_cart2"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/menu_offers" />

    </group>
</menu>